[tool.poetry]
name = "repeatanalyzer"
version = "3.0.2"
description = "This is a project is a tool for genotyping certain microbes base on varying patterns of short sequence repeats (SSRs)."
authors = ["Helen Catanese <hncatanese@gmail.com>"]
license = "GPL-3.0"
readme = "README.md"

[tool.poetry.dependencies]
python = ">=3.10, <3.13"
basemap = "^1.3.8"
matplotlib = "<3.8"
scipy = "^1.11.3"
geopy = "^2.4.0"
toml = "^0.10.2"
pyshp = "^2.3.1"
numpy = ">=1.21,<1.26"

[tool.poetry.group.dev.dependencies]
pre-commit = "^3.5.0"
black = "^23.9.1"
pytest = "^7.4.2"
coverage = "^7.3.2"
pytest-cov = "^4.1.0"

[tool.poetry.group.win.dependencies]
pyinstaller = "^6.2.0"

[tool.poetry.group.mac.dependencies]
py2app = "^0.28.6"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
